aptina-beans-it/src/main/java/example/errors/AnnotationBeanState.java
package example.errors;

import org.seasar.aptina.beans.BeanState;

/**
 * 
 * @author koichik
 */
@BeanState
public @interface AnnotationBeanState {

}
